--- a/blog.html
+++ b/blog.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página inicial</h1>
-    <p>Sejam bem-vindos ao nosso website</p>
-    <a href="sobre.html">Conheça a empresa</a>
-    <a href="blog.html">Acesse o blog</a>
+    <h1>Página de blog</h1>
+    <h2>Lançamentos</h2>
 </body>
 </html>
